@@ -1,5 +1,13 @@
 2007-02-20  Hollis Blanchard  <hollis@penguinppc.org>
 
+	* include/grub/elfload.h (grub_elf32_load_hook_t): Return grub_err_t.
+	All users updated.
+	(grub_elf64_load_hook_t): Likewise.
+	* kern/elf.c: Call `grub_error_push' before `grub_error'. Improve
+	debug output.
+
+2007-02-20  Hollis Blanchard  <hollis@penguinppc.org>
+
 	* kern/mm.c: Update copyright.
 	(grub_mm_debug): Correct syntax error.
 	(grub_mm_dump_free): New function.
